[metadata]
name = optical-flow
version = attr: optical_flow.__version__
description = "Pure python implementation of Gunnar Farneback's optical flow algorithm"
long_description = file: README.md
license = MIT
url = https://github.com/ericPrince/optical-flow

[options]
include_package_data = True
py_modules = optical_flow
python_requires = >=3.6
install_requires =
    numpy >= 1.17
    scipy >= 1.3

[options.package_data]
* = *.txt, *.rst, *.md


[flake8]
extend-ignore = E501
